--- a/MemoryMosaic/wwwroot/css/components/buttons/DropdownButton.css
+++ b/MemoryMosaic/wwwroot/css/components/buttons/DropdownButton.css
@@ -1,8 +1,7 @@
 .dropdownBtn {
     background-color: black;
-    width: 100%;
     border: none;
-    display: inline-flex;
+    display: flex;
     align-items: center;
     font-size: 1rem;
     padding: 11px;
