Missed a few icons using the old syntax. Updated them.

--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -10,7 +10,7 @@
 
         if (!String.IsNullOrWhiteSpace(ErrorIconTitle))
         {
-            <span title="@ErrorIconTitle" id="error" class="material-icons-outlined">error_outline</span>
+            <MaterialIcon ID="error" Icon="error_outline" Title="@ErrorIconTitle"/>
         }
         
         <IconButton Icon="check" OnClick="@ConfirmBtnClick"/>
