--- a/MemoryMosaic/Shared/NavMenu.razor
+++ b/MemoryMosaic/Shared/NavMenu.razor
@@ -54,7 +54,7 @@
 	<NavLink class="navLink" href="/" Match="NavLinkMatch.All"><MaterialIcon Icon="home"/><span>Home</span></NavLink>
 	<NavLink class="navLink" href="collections" Match="NavLinkMatch.All"><MaterialIcon Icon="photo_album"/><span>Collections</span></NavLink>
 	<NavLink class="navLink" href="import" Match="NavLinkMatch.All"><MaterialIcon Icon="backup"/><span>Import</span></NavLink>
-	<NavLink class="navLink" href="starred" Match="NavLinkMatch.All"><span class="material-icons">star</span><span>Starred</span></NavLink>
+	<NavLink class="navLink" href="starred" Match="NavLinkMatch.All"><MaterialIcon Icon="star"/><span>Starred</span></NavLink>
 	<NavLink class="navLink" href="no-dt" Match="NavLinkMatch.All"><MaterialIcon Icon="help_outline"/><span>No DT</span></NavLink>
 	<NavLink class="navLink" href="memories" Match="NavLinkMatch.All"><MaterialIcon Icon="history"/><span>Memories</span></NavLink>
 	<NavLink class="navLink" href="all-items" Match="NavLinkMatch.All"><MaterialIcon Icon="select_all"/><span>All Items</span></NavLink>
@@ -64,6 +64,6 @@
 
     @if (Program.Debug)
     {
-        <NavLink class="navLink" href="test" Match="NavLinkMatch.All"><span class="material-icons-outlined">bug_report</span><span>Test</span></NavLink>
+        <NavLink class="navLink" href="settings" Match="NavLinkMatch.All"><MaterialIcon Icon="bug_report"/><span>Test</span></NavLink>
     }
 </nav>
