Remove calls to ProgressPopUp constructors, now let Blazor handle initialization

--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -165,7 +165,7 @@
 }
 
 @code {
-	private ProgressPopUp popUp = new();
+	private ProgressPopUp popUp = null!;
 
 	private static ElementReference searchInput;
 
