--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -12,6 +12,15 @@
     <script src="MM.js"></script>
     <link rel="icon" href="MM Icon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"/> @*https://stackoverflow.com/questions/50303454/how-to-use-the-new-material-design-icon-themes-outlined-rounded-two-tone-and*@
+
+    @* Caching frequently used CSS files here. *@
+    <link href="css/components/NavMenu.css" rel="stylesheet"/>
+    <link href="css/components/ViewItem.css" rel="stylesheet"/>
+    <link href="css/components/LibraryContentViewer.css" rel="stylesheet"/>
+
+    <link href="css/components/buttons/DropdownButton.css" rel="stylesheet"/>
+    <link href="css/components/buttons/IconButton.css" rel="stylesheet"/>
+    <link href="css/components/buttons/IconTextButton.css" rel="stylesheet"/>
 </head>
 
 <body style="background-color: black; margin-right: 0; margin-left: 10px; margin-top: 0;">
