--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -17,7 +17,7 @@
 		return;
 	}
 
-	<KeyboardShortcuts AltS="@(() => { pathWidthClass = pathWidthClass == "shortWidth" ? "fullWidth" : "shortWidth"; StateHasChanged(); })" CtrlA="@SelectAll" CtrlS="@SaveChanges" CtrlO="@LoadItemsFromDisk" Del="DeleteSelected" Esc="@ClearChecks" Slash="@FocusSearchInput"/>
+	<KeyboardShortcuts AltS="@TogglePathWidth" CtrlA="@SelectAll" CtrlS="@SaveChanges" CtrlO="@LoadItemsFromDisk" Del="DeleteSelected" Esc="@ClearChecks" Slash="@FocusSearchInput"/>
 	
 	<header>
 		@if (selectedItems.Count > 0)
@@ -377,6 +377,12 @@
 		{
 			selectedItems.Clear();
 		}
+		StateHasChanged();
+	}
+
+	private void TogglePathWidth()
+	{
+		pathWidthClass = pathWidthClass == "shortWidth" ? "fullWidth" : "shortWidth";
 		StateHasChanged();
 	}
 
