Fix NavMenu's button for test page having wrong href value

--- a/MemoryMosaic/Shared/NavMenu.razor
+++ b/MemoryMosaic/Shared/NavMenu.razor
@@ -14,6 +14,6 @@
 
     @if (Program.Debug)
     {
-        <NavLink class="navLink" href="settings" Match="NavLinkMatch.All"><MaterialIcon Icon="bug_report"/><span>Test</span></NavLink>
+        <NavLink class="navLink" href="test" Match="NavLinkMatch.All"><MaterialIcon Icon="bug_report"/><span>Test</span></NavLink>
     }
 </nav>
