--- a/MemoryMosaic/Shared/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer.razor
@@ -4,6 +4,7 @@ More content is added when mouse enters the top or bottom of the screen, as long
 The default amount of items loaded at a time is 50.
 If it can't find any content, it shows an h1 saying no content.
 *@
+@inherits Component
 @using System.IO.Compression
 @inject IJSRuntime JSRuntime
 @inject NavigationManager navigationManager
