--- a/MemoryMosaic/Shared/MaterialIcon.razor
+++ b/MemoryMosaic/Shared/MaterialIcon.razor
@@ -1,3 +1,5 @@
+@inherits Component
+
 @if (Icon == "trash")
 {
     <svg id="@ID" width="24px" height="24px" class="material-icons-outlined @Class" viewBox="0 0 24 24" title="@Title"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg>
@@ -11,10 +13,4 @@ else
 	[Parameter, EditorRequired] public string Icon { get; set; } = null!;
 
 	[Parameter] public string? IconStyle { get; set; }
-
-	[Parameter] public string? ID { get; set; }
-
-	[Parameter] public string? Class { get; set; }
-
-	[Parameter] public string? Title { get; set; }
 }
