Rename folders under Styles/ to be capitalized

--- a/MemoryMosaic/Pages/Memories.razor
+++ b/MemoryMosaic/Pages/Memories.razor
@@ -1,6 +1,6 @@
 @page "/memories"
 
-<link rel="stylesheet" href="css/components/ViewItem.css"/>
+<link rel="stylesheet" href="css/Components/ViewItem.css"/>
 <link rel="stylesheet" href="css/Memories.css"/>
 
 <title>Memories - MM</title>
