--- a/MemoryMosaic/Shared/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer.razor
@@ -8,8 +8,8 @@ If it can't find any content, it shows an h1 saying no content.
 @using System.IO.Compression
 @inject IJSRuntime JSRuntime
 @inject NavigationManager navigationManager
-<link href="css/components/ViewItem.css" rel="stylesheet"/>
-<link href="css/components/LibraryContentViewer.css" rel="stylesheet"/>
+<link href="css/Components/ViewItem.css" rel="stylesheet"/>
+<link href="css/Components/LibraryContentViewer.css" rel="stylesheet"/>
 
 @if (MediaList.Count == 0)
 {
