--- a/MemoryMosaic/Shared/NavMenu.razor
+++ b/MemoryMosaic/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 @inherits Component
 
-<link href="css/components/NavMenu.css" rel="stylesheet"/>
+<link href="css/Components/NavMenu.css" rel="stylesheet"/>
 
 <nav>
 	<NavLink class="navLink" href="/" Match="NavLinkMatch.All"><MaterialIcon Icon="home"/><span>Home</span></NavLink>
