--- a/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
+++ b/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
@@ -1,7 +1,7 @@
 @page "/no-dt"
 
 <title>No Date Taken - MM</title>
-<link href="css/LibraryContentPage.css" rel="stylesheet"/>
+<link href="css/Pages/LibraryContentPage.css" rel="stylesheet"/>
 
 @{
     <header style="@lcv.Header.Style">
