--- a/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
+++ b/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
@@ -4,7 +4,7 @@
 @if (collection == null) { return; }
 
 <title>@collection.name - MemoryMosaic</title>
-<link href="css/CollectionView.css" rel="stylesheet"/>
+<link href="css/Pages/CollectionView.css" rel="stylesheet"/>
 
 <header>
     @if (lcv.Header.Visible)
