--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -1,7 +1,7 @@
 @page "/settings"
 
 <title>Settings - MM</title>
-<link href="css/Settings.css" rel="stylesheet"/>
+<link href="css/Pages/Settings.css" rel="stylesheet"/>
 
 <div id="body">
     <div>
