--- a/MemoryMosaic/Pages/Memories.razor
+++ b/MemoryMosaic/Pages/Memories.razor
@@ -1,7 +1,7 @@
 @page "/memories"
 
 <link rel="stylesheet" href="css/Components/ViewItem.css"/>
-<link rel="stylesheet" href="css/Memories.css"/>
+<link rel="stylesheet" href="css/Pages/Memories.css"/>
 
 <title>Memories - MM</title>
 
