Create TextInput component

--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -17,6 +17,7 @@
     <link href="css/Components/NavMenu.css" rel="stylesheet"/>
     <link href="css/Components/ViewItem.css" rel="stylesheet"/>
     <link href="css/Components/LibraryContentViewer.css" rel="stylesheet"/>
+    <link href="css/Components/TextInput.css" rel="stylesheet"/>
 
     <link href="css/Components/Buttons/DropdownButton.css" rel="stylesheet"/>
     <link href="css/Components/Buttons/IconButton.css" rel="stylesheet"/>
