--- a/MemoryMosaic/Shared/TextInput.razor
+++ b/MemoryMosaic/Shared/TextInput.razor
@@ -5,11 +5,11 @@
 @* https://stackoverflow.com/a/75706085 *@
 @if (Disabled)
 {
-	<input type="text" @bind="@Input" @bind:after="@OnInputChanged" @bind:event="oninput" placeholder="@Placeholder" disabled/>
+	<input type="text" style="width: @Width" @bind="@Input" @bind:after="@OnInputChanged" @bind:event="oninput" placeholder="@Placeholder" disabled/>
 }
 else
 {
-	<input type="text" @bind="@Input" @bind:after="@OnInputChanged" @bind:event="oninput" placeholder="@Placeholder"/>
+	<input type="text" style="width: @Width" @bind="@Input" @bind:after="@OnInputChanged" @bind:event="oninput" placeholder="@Placeholder"/>
 }
 
 @code {
@@ -23,6 +23,9 @@ else
 
 	[Parameter]
 	public string? Placeholder { get; set; }
+
+	[Parameter]
+	public string Width { get; set; } = "200px";
 
 	[Parameter]
 	public bool Disabled { get; set; }
