Add FontSize param

--- a/MemoryMosaic/Shared/TextInput.razor
+++ b/MemoryMosaic/Shared/TextInput.razor
@@ -5,11 +5,11 @@
 @* https://stackoverflow.com/a/75706085 *@
 @if (Disabled)
 {
-	<input @ref="@input" type="text" id="@ID" class="@Class" style="width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder" disabled/>
+	<input @ref="@input" type="text" id="@ID" class="@Class" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder" disabled/>
 }
 else
 {
-	<input @ref="@input" type="text" id="@ID" class="@Class" style="width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder"/>
+	<input @ref="@input" type="text" id="@ID" class="@Class" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder"/>
 }
 
 @code {
@@ -21,6 +21,9 @@ else
 
 	[Parameter]
 	public string? Placeholder { get; set; }
+
+	[Parameter]
+	public int FontSize { get; set; }
 
 	[Parameter]
 	public string Width { get; set; } = "200px";
